...
        UserDefaults.standard.set(date, forKey: "lastSyncDateInDateFormat")
        let lastSyncDate = "\(DateTimeUtility().getCurrentTime(date: date)) / \(DateTimeUtility().getCurrentDate(date: date))"
        UserDefaults.standard.set(lastSyncDate, forKey: "lastSyncDate")
        if syncUpFailed {
            UserDefaults.standard.set("Last Sync Failed", forKey: "lastSyncStatus")
        }else{
            UserDefaults.standard.set("Last Sync Successful", forKey: "lastSyncStatus")
        }
        self.setLastSyncValues()
    }
    
    
    @IBAction func syncNowButtonTapped(_ sender: UIButton){
...
