...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b8V-oe-MsV">
                                                <rect key="frame" x="0.0" y="0.0" width="240" height="65"/>
                                                <connections>
                                                    <action selector="syncNowButtonTapped:" destination="hJa-6X-IYc" eventType="touchUpInside" id="y6S-BP-1ly"/>
                                                </connections>
                                            </button>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sync Now" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="im3-uq-Fwn">
                                                <rect key="frame" x="10" y="24.5" width="80" height="16"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="80" id="3Gb-vc-NL6"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="Ubuntu" family="Ubuntu" pointSize="14"/>
                                                <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
